Add GPG to releases

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,6 +34,21 @@ archives:
 checksum:
   name_template: "{{ .ProjectName }}_{{ .Version }}_SHA256SUMS"
 
+signs:
+  - artifacts: checksum
+    signature: "${artifact}.sig"
+    args:
+      - --batch
+      - --yes
+      - --pinentry-mode
+      - loopback
+      - --local-user
+      - "{{ .Env.GPG_FINGERPRINT }}"
+      - --output
+      - "${signature}"
+      - --detach-sign
+      - "${artifact}"
+
 release:
   github:
     owner: JonasKop
